--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,20 @@
 
 
 .active {
+  position: relative;
   color: #5ece7b;
-  border-bottom: 2px solid #5ece7b;
-  padding-bottom: 28px;
 }
+
+.active::after {
+  content: "";
+  position: absolute;
+  top: 52px;        
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #5ece7b;
+}
+
 .active a { color: #5ece7b; }
 
 .out-of-stock { opacity: 0.5; }
