--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,16 +21,27 @@
 
 .active a { color: #5ece7b; }
 
-.out-of-stock { opacity: 0.5; }
+.out-of-stock {
+  position: relative;
+}
+
+.out-of-stock img {
+  opacity: 0.4;
+}
+
 .out-of-stock::after {
   content: "OUT OF STOCK";
-  font-size: 24px;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9999;
+
+  font-size: 24px;
+  font-weight: 400;
+  color: #8d8f9a;
+  pointer-events: none;
 }
+
 
 .customShadow:hover { box-shadow: 0 4px 35px 0 #a8acb030; }
 
